Reorganisation of composite distance measures to avoid multiple normalisation. Reorganisation of scripts for Umea paper. Terminology 'measure' used in place of 'metric' to reduce confusion with mathematical metric concept.