@@ -5,15 +5,13 @@
 package uk.ac.standrews.cs.population_linkage.groundTruthML;
 
 import uk.ac.standrews.cs.neoStorr.impl.LXP;
-import uk.ac.standrews.cs.population_linkage.ApplicationProperties;
 import uk.ac.standrews.cs.population_linkage.characterisation.LinkStatus;
+import uk.ac.standrews.cs.population_linkage.datasets.Umea;
 import uk.ac.standrews.cs.population_linkage.supportClasses.Utilities;
 import uk.ac.standrews.cs.population_records.RecordRepository;
 import uk.ac.standrews.cs.population_records.record_types.Birth;
 
 import java.io.IOException;
-import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -22,20 +20,18 @@ import java.util.List;
  * The fields used for comparison are listed in getComparisonFields().
  * The ground truth is listed in isTrueLink.
  **/
-
 public class UmeaSiblingBundlingML extends AllPairsSameSourceLinkageAnalysisML {
 
     protected static final int EVERYTHING = Integer.MAX_VALUE;
     public int ALL_LINKAGE_FIELDS = 8;
 
-    public UmeaSiblingBundlingML(Path store_path, String repo_name, final String distance_results_filename) throws IOException {
-        super(store_path,repo_name, distance_results_filename);
+    public UmeaSiblingBundlingML(String repo_name, final String distance_results_filename) throws IOException {
+        super(repo_name, distance_results_filename);
     }
 
     @Override
     public Iterable<LXP> getSourceRecords(RecordRepository record_repository) {
-        // return Utilities.getBirthRecords( record_repository );
-        return filter(ALL_LINKAGE_FIELDS, EVERYTHING, Utilities.getBirthRecords( record_repository ), getComparisonFields());
+        return filter(ALL_LINKAGE_FIELDS, EVERYTHING, Utilities.getBirthRecords(record_repository), getComparisonFields());
     }
 
     @Override
@@ -56,7 +52,7 @@ public class UmeaSiblingBundlingML extends AllPairsSameSourceLinkageAnalysisML {
 
     @Override
     public List<Integer> getComparisonFields() {
-        return Arrays.asList(
+        return List.of(
                 Birth.FATHER_FORENAME,
                 Birth.FATHER_SURNAME,
                 Birth.MOTHER_FORENAME,
@@ -69,11 +65,6 @@ public class UmeaSiblingBundlingML extends AllPairsSameSourceLinkageAnalysisML {
 
     public static void main(String[] args) throws Exception {
 
-        Path store_path = ApplicationProperties.getStorePath();
-        String repo_name = "Umea";
-
-        new UmeaSiblingBundlingML(store_path, repo_name, "UmeaSiblingBundlingMLDistances").run();
+        new UmeaSiblingBundlingML(Umea.REPOSITORY_NAME, "UmeaSiblingBundlingMLDistances").run();
     }
-
-
 }
